feat: add a route to generate missing metadata pictures variants
